<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    card_view:cardCornerRadius="4dp"
    style="@style/style_cardview">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp">
        <ImageView
            android:id="@+id/img_item_photo"
            android:contentDescription="@string/set_photo"
            style="@style/style_cardview_image"/>
        <TextView
            android:id="@+id/tv_item_name"
            android:layout_toEndOf="@id/img_item_photo"
            android:text="@string/name"
            style="@style/style_cardview_textview.head"/>
        <TextView
            android:id="@+id/tv_item_remarks"
            android:layout_below="@id/tv_item_name"
            android:layout_toEndOf="@id/img_item_photo"
            android:text="@string/remarks"
            style="@style/style_cardview_textview.body"/>
        <TextView
            android:id="@+id/tv_item_symbol"
            android:layout_below="@id/tv_item_remarks"
            android:layout_toEndOf="@id/img_item_photo"
            android:text="@string/symbol"
            style="@style/style_cardview_textview.body"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="68dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_set_detail"
                android:text="@string/detail"
                style="@style/style_cardview_button"/>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>
