<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    style="@style/style_relative_layout"
    tools:context="com.dicoding.paul.zodiac.DetailActivity">

    <!-- action bar is replaced by toolbar -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        style="@style/style_toolbar">
        <TextView
            android:id="@+id/toolbar_title"
            style="@style/style_toolbar_textview"/>
    </android.support.v7.widget.Toolbar>

    <!-- scrollview is placed below toolbar to prevent the toolbar being scrolled -->
    <ScrollView
        android:layout_below="@id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/activity_detail_relative_layout_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin">
                <!-- Circleimageview uses scaletype center_crop by default, the image displayed is kinda weird (can't be fitted)-->
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_item_photo"
                    style="@style/style_detail_view_imageview"/>
                <LinearLayout
                    android:layout_toEndOf="@id/img_item_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true">
                    <TextView
                        android:id="@+id/tv_item_name"
                        style="@style/style_detail_view_textview_head.name"/>
                    <TextView
                        android:id="@+id/tv_item_remarks"
                        style="@style/style_detail_view_textview_head.remark"/>
                </LinearLayout>
            </RelativeLayout>
            <View
                android:id="@+id/activity_detail_relative_layout_divider"
                android:layout_below="@id/activity_detail_relative_layout_head"
                style="@style/style_detail_view_divider"/>
            <TextView
                android:id="@+id/tv_item_myth"
                android:layout_below="@id/activity_detail_relative_layout_divider"
                style="@style/style_detail_view_textview_body"/>
            <TableLayout
                android:layout_below="@id/tv_item_myth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin">
                    <TextView
                        android:text="@string/symbol"
                        style="@style/style_detail_view_textview_bottom"/>
                    <TextView
                        android:id="@+id/tv_item_symbol"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        style="@style/style_detail_view_textview_bottom"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin">
                    <TextView
                        android:text="@string/element"
                        style="@style/style_detail_view_textview_bottom"/>
                    <TextView
                        android:id="@+id/tv_item_element"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        style="@style/style_detail_view_textview_bottom"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin">
                    <TextView
                        android:text="@string/ruler"
                        style="@style/style_detail_view_textview_bottom"/>
                    <TextView
                        android:id="@+id/tv_item_ruler"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        style="@style/style_detail_view_textview_bottom"/>
                </TableRow>
            </TableLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>